# cs17-lab03

./: CMakeLists.txt  main.cpp  temperature.cc  temperature.h  test_input.cc
